# learning-rust

./: .gitignore  Cargo.toml  Makefile  README.md  arrays.rs  closures.rs  compiler.rs  default.rs  embedded-rust.md  enum.rs  error.rs  generics.rs  macro.rs  map.rs  never-return.rs  reference.rs  struct.rs  thread.rs  unwind.rs
.cargo/: config
async/: Cargo.toml
async/src/: async-main.rs  async-move.rs  main.rs
binaryen-example/: .gitignore  Cargo.toml  Makefile  config.wasm  test-basic-wasm.js  test-update-wasm.js  test-wasm.js
binaryen-example/src/: lib.rs  main.rs  update.rs
cargo-example/: Cargo.toml
cargo-example/src/: cargo-clap.rs  filtered.rs  non-filtered.rs
chumsky/: Cargo.toml  README.md  test.foo
chumsky/src/: first.rs  main.rs  primitives.rs
crypto/: Cargo.toml
crypto/src/: ec-parse.rs  ecdsa-sign.rs  ecdsa.rs  generic-array.rs  main.rs  typenum.rs
embassy/: Cargo.toml
embassy/src/: main_expanded.rs  no_macros.rs
embedded/app/: .gitignore  Cargo.toml  README.md  run.sh
embedded/app/.cargo/: config.toml
embedded/app/src/: main.rs
features/: Cargo.toml
features/src/: main.rs
ffi/: .gitignore  Makefile  cfunctions.c  cfunctions.h  something.rs
ffi_cargo/: .gitignore  Cargo.toml  README.md  build.rs
ffi_cargo/src/: main.rs
future/src/: main.rs
hyper-server/: Cargo.toml
hyper-server/src/: main.rs
id-arena-example/: Cargo.toml
id-arena-example/src/: main.rs
indexmap-example/: Cargo.toml
indexmap-example/src/: main.rs
main/: Cargo.toml
main/src/: bajja.rs  basic.rs  main.rs  simple.rs
memchr/: Cargo.toml
memchr/src/: main.rs
mio-example/: Cargo.toml
mio-example/src/: main.rs
notes/: clap-cargo-extension.md  embassy.md  embedded-rust.md  from.md  futures.md  gdb.md  github-actions-debugging.md  ir.md  lang_item.md  lifetimes.md  linking.md  macros.md  pin.md  rustc.md  serde.md  trunk.md
plotter-example/: Cargo.toml
plotter-example/src/: grid.rs  main.rs
proc-macro/: Cargo.toml  main.rs
proc-macro/attribute-macro/: Cargo.toml
proc-macro/attribute-macro/src/: lib.rs
proc-macro/attribute-macro/tests/: attribute.rs
proc-macro/derive-macro/: Cargo.toml
proc-macro/derive-macro/src/: lib.rs
proc-macro/function-macro/: Cargo.toml
proc-macro/function-macro/src/: lib.rs
python-example/: Cargo.toml  Makefile  README.md
python-example/src/: lib.rs
reqwest-example/: Cargo.toml
reqwest-example/src/: main.rs
rust-compile/: .gitignore  Cargo.toml  README.md  component.wasm
rust-compile/src/: example.rs  main.rs
serde-examples/: Cargo.toml
serde-examples/src/: enum.rs
snippets/: Cargo.toml
snippets/src/: arrays.rs  boxing.rs  cell.rs  clone.rs  closures.rs  default.rs  enums.rs  envvar.rs  expected.rs  factorial.rs  functions.rs  generics.rs  hashmap.rs  insertion.rs  iterator.rs  lib.rs  lifetimes.rs  macros.rs  module_path.rs  owner.rs  readline.rs  refs.rs  results.rs  selection.rs  string.rs  structs.rs  traits.rs  types.rs  vectors.rs
src/: any.rs  arrays.rs  associated-types.rs  backtrace.rs  black_box.rs  borrow2.rs  box.rs  box_no_std.rs  callable.rs  cell.rs  chain.rs  compiler.rs  condvar.rs  const-generics.rs  const_unit_block.rs  copy_from_slice.rs  default.rs  deref.rs  dynamic-dispatch.rs  empty-enum.rs  enum.rs  enumerate.rs  factorial.rs  file.rs  flatten.rs  fmt.rs  fn.rs  from.rs  from_str.rs  function_calls.rs  future.rs  generator.rs  generator2.rs  generator3.rs  generator4.rs  hashmap.rs  immutables.rs  index.rs  infallible.rs  insertion.rs  (+75 more)
ssh-key-example/: Cargo.toml
ssh-key-example/src/: main.rs
startup/: Cargo.toml
startup/src/: main.rs
static-files-example/: Cargo.toml  build.rs
static-files-example/src/: main.rs
tokio-exploration/: Cargo.toml  README.md
tokio-exploration/src/: blocking.rs  join-handle.rs  main.rs  mpsc.rs  mutex.rs  notify.rs  oneshot.rs  unbounded.rs
trait_usage/driver/: Cargo.toml
trait_usage/driver/src/: lib.rs
trait_usage/impl1/: Cargo.toml
trait_usage/impl1/src/: lib.rs
trait_usage/impl2/: Cargo.toml
trait_usage/impl2/src/: lib.rs
trait_usage/sometrait/: Cargo.toml
trait_usage/sometrait/src/: lib.rs
trait_usage/usage/: Cargo.toml
trait_usage/usage/src/: main.rs
trunk-example/: Cargo.toml  Makefile  README.md  index.html
trunk-example/src/: main.rs
tuf-client/: .gitignore  Cargo.toml  README.md  root.json  tuftool.sh
tuf-client/keys/: root.pem
tuf-client/src/: main.rs
tuf-client/tuf_repo/metadata/: 1.snapshot.json  1.targets.json  timestamp.json
tuf-keyid/: Cargo.toml  README.md
tuf-keyid/src/: main.rs
wasm-bindgen-example/: Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json
wasm-bindgen-example/src/: lib.rs
wasm-example/: Cargo.toml  Makefile  README.md  index.html
wasm-example/src/: lib.rs
wit-bindgen-example/js/: package.json
xshell/: Cargo.toml
xshell/src/: main.rs
yew-example/: Cargo.toml  Makefile  README.md  index.html
yew-example/src/: firstcomponent.rs  main.rs  usestate.rs
