[workspace]

members = [
    "main",
    "snippets",
    "hyper-server",
]
exclude = ["mio-example", "crypto", "startup", "embedded", "embassy",
           "features", "drogue-device", "xshell", "ffi_cargo",
           "trait_usage/sometrait", "trait_usage/impl1",
           "trait_usage/impl2", "trait_usage/usage",
           "static_cell", "streams", "chumsky",
           "trait_usage/driver", "future", "nb", "panic", "interrupts",
           "cargo-example", "cargo-package", "tuf-keyid"]
