[workspace]

members = [
    "main",
    "snippets",
    "hyper-server",
]
exclude = ["mio-example", "crypto", "startup", "embedded", "embassy",
           "features", "drogue-device", "xshell", "ffi_cargo",
           "trait_usage/sometrait", "trait_usage/impl1",
           "trait_usage/impl2", "trait_usage/usage",
           "static_cell", "streams", "chumsky",
           "trait_usage/driver", "future", "nb", "panic", "interrupts",
           "cargo-example", "cargo-package", "tuf-keyid", "tuf-client",
           "actix-example", "memchr", "trunk-example", "yew-example",
           "wasm-example", "wasm-bindgen-example", "reqwest-example",
           "base64-example", "serde-examples", "exploration",
           "async-exploration", "ssh-key-example", "webpack-example",
           "wit-bindgen-example", "static-files-example", "indexmap-example"]
