[package]
name = "async"
version = "0.1.0"
authors = ["Daniel Bevenius <daniel.bevenius@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
futures = { version = "0.3.*" }
tokio = { version = "1.25.0", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "async-move"
path = "src/async-move.rs"

[[bin]]
name = "async-main"
path = "src/async-main.rs"
