[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
hkdf = "0.11.0"
hex = "0.4.3"
typenum = "1.13.0"
generic-array = "0.14"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "typenum"
path = "src/typenum.rs"

[[bin]]
name = "genarray"
path = "src/generic-array.rs"
