[package]
name = "embassy-exploration"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.1.0", features = ["std", "integrated-timers", "nightly"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime", "std", "nightly"] }
#embassy-executor = { path = "/home/danielbevenius/work/drougue/embassy/embassy-executor", features = ["std", "integrated-timers", "nightly"] }
#embassy-time = { path = "/home/danielbevenius/work/drougue/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "std", "nightly"] }
log = "0.4.14"
env_logger = "0.9.0"
# This is really a dependency of embassy-executor but I think it has not been
# enabled when using the std feature, which leads to a link time error.
critical-section = { version = "1.1", features = [ "std" ] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "expanded"
path = "src/main_expanded.rs"

[[bin]]
name = "no_macros"
path = "src/no_macros.rs"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "master" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "master" }
