[package]
name = "mio-example"
version = "0.1.0"
authors = ["Daniel Bevenius <daniel.bevenius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = []
#os-poll = []
#os-ext = ["os-poll"]
#net = []

[dependencies]
mio = { version = "0.7.0", features = ["os-poll", "net", "tcp", "os-ext"] }
libc = "0.2.86"
