[package]
name = "proc_macros"
version = "0.1.0"
edition = "2021"
publish = false

proc-macro = true

[workspace]

[[bin]]
name = "proc-macros"
path = "main.rs"

[dependencies]
derive-macro = { path = "derive-macro" }
attribute-macro = { path = "attribute-macro" }
function-macro = { path = "function-macro" }
