[package]
name = "python-example"
version = "0.1.0"
edition = "2021"

[dependencies.pyo3]
version = "0.20.3"
features = ["abi3-py311"]
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = [ "py_main", ] }

[build-dependencies]
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = ["build"] }

[lib]
crate-type = ["cdylib"]

[workspace]
