[package]
name = "tokio-exploration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "join-handle"
path = "src/join-handle.rs"

[[bin]]
name = "blocking"
path = "src/blocking.rs"

[[bin]]
name = "notify"
path = "src/notify.rs"

[[bin]]
name = "oneshot"
path = "src/oneshot.rs"

[[bin]]
name = "mpsc"
path = "src/mpsc.rs"

[[bin]]
name = "unbounded"
path = "src/unbounded.rs"

[[bin]]
name = "mutex"
path = "src/mutex.rs"
